--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Play&amp;display=swap">
 </head>
 
-<body style="background: #2d2d2d;">
-    <div class="row" style="background: #2d2d2d;">
+<body style="background: #010101;">
+    <div class="row" style="background: #010101;">
         <div class="col">
             <div style="height: 80px;"></div>
         </div>
     </div>
     <div class="row">
-        <div class="col" style="text-align: center;background: #2d2d2d;"><img src="assets/img/AlienSkinLogo.png" style="width: 25%;margin: 30px;"></div>
+        <div class="col" style="text-align: center;background: #010101;"><img src="assets/img/ASkinLogoWideShard.png" style="width: 25%;margin: 30px;"></div>
     </div>
     <div class="row justify-content-center" style="text-align: center;color: rgb(237,237,237);">
         <div class="col-8">
@@ -39,6 +39,9 @@
     <div class="row justify-content-center" style="text-align: center;color: rgb(237,237,237);">
         <div class="col-8">
             <p style="font-family: Play, sans-serif;font-size: 25px;margin: 15px;text-align: left;">–&nbsp;Team Alien Skin<br></p>
+        </div>
+        <div class="col-8">
+            <p style="font-family: Play, sans-serif;font-size: 25px;margin: 15px;text-align: left;">(Yes, we are getting closer)</p>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
