--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background: #2d2d2d;color: rgb(237,237,237);font-family: Play, sans-serif;">
+<html lang="en" style="background: #010101;color: rgb(237,237,237);font-family: Play, sans-serif;">
 
 <head>
     <meta charset="utf-8">
